# cartesi-fhe-demo

./: CMakeLists.txt  README.md  riscv.toolchain
include/: boolean_data.h  fhe_data.h  string_cap_char_tfhe.h  string_cap_char_tfhe.types.h
src/: main.cc  string_cap_char_tfhe.cc
